# dev-models

./: CONTRIBUTING.md  LICENSE  README.md  plan.md
.github/: INCIDENT_RESPONSE.md  PULL_REQUEST_TEMPLATE.md  branch-protection.md  copilot-instructions.md  dependabot.yml  guardrails.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: planner.agent.md  reviewer.agent.md
.github/skills/: generate-docs.yml  generate-language-module.yml  review-pr.yml
.github/workflows/: agent-pr-review.yml  guardrails-check.yml
.grok/: README.md  grok-instructions.md  guardrails.md
.grok/agents/: executor.agent.md  planner.agent.md  reviewer.agent.md
.grok/config/: mcp-config.json  preToolUse.json
.grok/memory/: project-memory.md
.grok/skills/: generate-docs.yml  generate-language-module.yml  review-pr.yml
c/: README.md
docs/: adding-a-new-model.md  naming-and-versioning.md
java/: README.md
javascript/: README.md
kotlin/: README.md
kubernetes/: README.md
manual/: README.md
python/: README.md
python/models/web-api/v1.0.0/: .gitignore  Dockerfile  README.md  pyproject.toml
python/models/web-api/v1.0.0/src/myapp/: __init__.py  config.py  main.py
python/models/web-api/v1.0.0/tests/: test_health.py
scripts/: copy-model.sh  generate-index.py  validate-structure.sh
spring-boot/4/: README.md  (+2 more)
templates/python/fastapi/template/: Dockerfile  README.md  pyproject.toml
templates/python/fastapi/template/app/: dependencies.py  main.py  models.py
templates/python/fastapi/template/app/routers/: items.py
unix/: README.md
(+46 files in other folders)
