[project]
name = "myapp"
version = "0.1.0"
description = "Example web API (replace with your project)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    # "mypy>=1.10",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

# [tool.mypy]
# python_version = "3.11"
# strict = true
# warn_return_any = true
# warn_unused_configs = true
# files = ["src"]