[project]
name = "fastapi-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"